[build-system]
requires = ["ksp-builder>=0.1.0", "setuptools>=65.0.0", "wheel>=0.36.0"]
build-backend = "ksp_builder"

[project]
name = "pyonesignal"
version = "0.1.0"
description = "A complete Pyjnius-based OneSignal Android SDK v5 wrapper for Kivy apps."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Kartavya Shukla", email = "novfensec@protonmail.com" }
]
keywords = ["kivy", "android", "onesignal", "push-notifications", "pyjnius"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Android",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies required for PyOneSignal to run
dependencies = [
    "pyjnius>=1.6.0",
    "androidx",
]

[project.optional-dependencies]
core = ["pyonesignal-core"]
notifications = ["pyonesignal-notifications"]
inappmessages = ["pyonesignal-inappmessages"]
location = ["pyonesignal-location"]

[project.urls]
Repository = "https://github.com/KivyPackages/PyOneSignal"
Issues = "https://github.com/KivyPackages/PyOneSignal/issues"


[tool.uv.build-backend]
module-name = "pyonesignal"


[tool.uv.sources]
ksp-builder = { git = "https://github.com/kivy-school/ksp-builder" }
androidx = { path = "../androidx" }
pyonesignal-core = { path = "core" }
pyonesignal-notifications = { path = "notifications" }
pyonesignal-inappmessages = { path = "in-app-messages" }
pyonesignal-location = { path = "location" }

[tool.kivy-school.android]
gradle_dependencies = [
    "com.onesignal:OneSignal:[5.6.1, 5.9.99]" # Example of adding OneSignal for push notifications; adjust version as needed
]
permissions = [
    "POST_NOTIFICATIONS", "INTERNET", "ACCESS_NETWORK_STATE", "WAKE_LOCK" # Example permissions; add as needed
]