[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyonesignal-core"
version = "5.9.2"
description = "pyjnius wrappers for OneSignal Android SDK core 5.9.2"
requires-python = ">=3.11"
dependencies = [
  "pyjnius",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyonesignal"]
